# JohnStrunk-_-CommonCast

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  GEMINI.md  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.gemini/: settings.json
.github/: markdownlint-config.yaml
.github/instructions/: markdown.instructions.md  pre-commit.instructions.md  python-project.instructions.md  python.instructions.md
.github/skills/quality-assurance/: SKILL.md
.github/workflows/: ci-workflow.yaml
design/research/: airplay.md  chromecast.md  dial.md  dlna.md
docs/: backend_implementation_guide.md  user_guide.md
docs/specs/: README.md
src/commoncast/: __init__.py  cli.py  event.py  events.py  registry.py  server.py  types.py
src/commoncast/chromecast/: __init__.py  adapter.py
src/commoncast/cli/: cc_discover.py
src/commoncast/dial/: __init__.py  adapter.py
src/commoncast/dlna/: __init__.py  adapter.py
tests/: test_chromecast.py  test_cli_discover.py  test_commoncast.py  test_dial.py  test_dlna.py  test_dlna_compliance.py  test_memory_leak.py  test_registry.py  test_server.py  test_types.py
